--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -273,23 +273,23 @@
               <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
-                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
                               </div>
                             </div>
                 </div>
@@ -302,7 +302,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -330,7 +330,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
-                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -358,7 +358,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
-                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -386,7 +386,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -414,7 +414,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                        </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
