edit size portfolio

--- a/public/04-article.html
+++ b/public/04-article.html
@@ -333,23 +333,23 @@
               <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
                               </div>
                             </div>
                 </div>
@@ -362,7 +362,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -390,7 +390,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -418,7 +418,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -446,7 +446,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -474,7 +474,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
