--- a/public/index.html
+++ b/public/index.html
@@ -1009,23 +1009,23 @@
               <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
                               </div>
                             </div>
                 </div>
@@ -1038,7 +1038,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1066,7 +1066,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1094,7 +1094,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1122,7 +1122,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1150,7 +1150,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
