--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht">
                             <picture>
-                              <source srcset="img/head-img-1.png" media="(min-width: 576px)"/><img src="img/head-img-1-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-1.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-1.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-1-sm.webp"/><img src="img/head-img-1-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -214,7 +216,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht">
                             <picture>
-                              <source srcset="img/head-img-2.png" media="(min-width: 576px)"/><img src="img/head-img-2-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-2.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-2.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-2-sm.webp"/><img src="img/head-img-2-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -252,7 +256,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht">
                             <picture>
-                              <source srcset="img/head-img-3.png" media="(min-width: 576px)"/><img src="img/head-img-3-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-3.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-3.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-3-sm.webp"/><img src="img/head-img-3-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -289,7 +295,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht">
                             <picture>
-                              <source srcset="img/head-img-4.png" media="(min-width: 576px)"/><img src="img/head-img-4-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-4.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-4.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-4-sm.webp"/><img src="img/head-img-4-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -328,7 +336,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht img-mr">
                             <picture>
-                              <source srcset="img/head-img-5.png" media="(min-width: 576px)"/><img src="img/head-img-5-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-5.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-5.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-5-sm.webp"/><img src="img/head-img-5-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -366,7 +376,9 @@
                         <div class="col-md wow fadeInRight" data-wow-delay="0.52s">
                           <div class="prm_pht">
                             <picture>
-                              <source srcset="img/head-img-6.png" media="(min-width: 576px)"/><img src="img/head-img-6-sm.png" alt=""/>
+                              <source type="image/webp" srcset="img/head-img-6.webp" media="(min-width: 576px)"/>
+                              <source type="image/png" srcset="img/head-img-6.png" media="(min-width: 576px)"/>
+                              <source type="image/webp" srcset="img/head-img-6-sm.webp"/><img src="img/head-img-6-sm.png" alt=""/>
                             </picture>
                           </div>
                         </div>
@@ -420,7 +432,7 @@
               <div class="wrks__tbs-itm" id="tab1">
                 <div class="arn-msnr"><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-1.jpg">
                   <picture>
-                    <source srcset="img/img/project-1-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-xs.jpg" alt=""/>
+                    <source srcset="img/project-1-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -431,7 +443,7 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm full-modal-open-js" href="#" data-img="img/project-2.jpg">
                   <picture>
-                    <source srcset="img/img/project-2-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-xs.jpg" alt=""/>
+                    <source srcset="img/project-2-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -444,7 +456,7 @@
                   <div class="cl-7">
                     <div class="arn-msnr"><a class="cl cl-7 itm ht6 full-modal-open-js" href="#" data-img="img/project-3.jpg">
                       <picture>
-                        <source srcset="img/img/project-3-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-xs.jpg" alt=""/>
+                        <source srcset="img/project-3-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -456,7 +468,7 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht6 full-modal-open-js" href="#" data-img="img/project-4.jpg">
                       <picture>
-                        <source srcset="img/img/project-4-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-xs.jpg" alt=""/>
+                        <source srcset="img/project-4-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -469,7 +481,7 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-7 itm ht5 full-modal-open-js" href="#" data-img="img/project-5.jpg">
                       <picture>
-                        <source srcset="img/img/project-5-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-xs.jpg" alt=""/>
+                        <source srcset="img/project-5-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -482,7 +494,7 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht5 full-modal-open-js" href="#" data-img="img/project-6.jpg">
                       <picture>
-                        <source srcset="img/img/project-6-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-xs.jpg" alt=""/>
+                        <source srcset="img/project-6-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -496,7 +508,7 @@
                   </div>
                   <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 full-modal-open-js" href="#" data-img="img/project-7.jpg">
                     <picture>
-                      <source srcset="img/img/project-7-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-xs.jpg" alt=""/>
+                      <source srcset="img/project-7-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-xs.jpg" alt=""/>
                     </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
@@ -507,7 +519,7 @@
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a><a class="cl cl-12 itm full-modal-open-js" href="#" data-img="img/project-8.jpg">
                     <picture>
-                      <source srcset="img/img/project-8-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-xs.jpg" alt=""/>
+                      <source srcset="img/project-8-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-xs.jpg" alt=""/>
                     </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
@@ -519,7 +531,7 @@
                     </div></a>
                   </div><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-9.jpg">
                   <picture>
-                    <source srcset="img/img/project-9-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-xs.jpg" alt=""/>
+                    <source srcset="img/project-9-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -530,7 +542,7 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm lst" href="#">
                   <picture>
-                    <source srcset="img/img/project-all-xs.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all.jpg" alt=""/>
+                    <source srcset="img/project-all-xs.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all.jpg" alt=""/>
                   </picture>
                   <div class="itm__more" id="loadWorks">
                     <big class="thm d-inline-block">
@@ -563,7 +575,7 @@
                       </div>
                       <div class="col">
                         <div class="s-about__text-block s-about__text-block--aside">
-                          <div class="s-about__img-wrap"><img src="img/loadgif.gif" data-src="img/photo.png" alt=""/>
+                          <div class="s-about__img-wrap"><img src="img/loadgif.gif" data-src="img/photo.jpg" alt=""/>
                           </div>
                           <div class="s-about__aside-text"> 
                             <p>Пока одни думают какого цвета сделать кнопку, мы&nbsp;думаем как обойтись без неё.</p>
@@ -1009,23 +1021,23 @@
               <div class="col">
                 <div class="tabs__caption">
                             <div class="s-team__slide-sm tabs__btn active">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy-modal" src="img/loadgif.gif" data-img-src="img/team-1-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy-modal" src="img/loadgif.gif" data-img-src="img/team-2-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy-modal" src="img/loadgif.gif" data-img-src="img/team-3-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy-modal" src="img/loadgif.gif" data-img-src="img/team-4-sm.png" alt=""/>
                               </div>
                             </div>
                             <div class="s-team__slide-sm tabs__btn">
-                              <div class="s-team__img-wrap-sm"><img class="lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
+                              <div class="s-team__img-wrap-sm"><img class="lazy-modal" src="img/loadgif.gif" data-img-src="img/team-5-sm.png" alt=""/>
                               </div>
                             </div>
                 </div>
@@ -1038,7 +1050,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-1-sm.png" alt=""/>
+                        </div><img class="res-i lazy-modal" src="img/loadgif.gif" data-img-src="img/team-1-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1066,7 +1078,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Денис Миловидов
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-2-sm.png" alt=""/>
+                        </div><img class="res-i lazy-modal" src="img/loadgif.gif" data-img-src="img/team-2-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1094,7 +1106,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Алиса Новикова
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-3-sm.png" alt=""/>
+                        </div><img class="res-i lazy-modal" src="img/loadgif.gif" data-img-src="img/team-3-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1122,7 +1134,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-4-sm.png" alt=""/>
+                        </div><img class="res-i lazy-modal" src="img/loadgif.gif" data-img-src="img/team-4-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
@@ -1150,7 +1162,7 @@
                     <div class="col-xxl-5 col-md-4 align-self-end">
                       <div class="s-team__img-wrap">
                         <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                        </div><img class="res-i lazy" src="img/loadgif.gif" data-src="img/team-5-sm.png" alt=""/>
+                        </div><img class="res-i lazy-modal" src="img/loadgif.gif" data-img-src="img/team-5-sm.png" alt=""/>
                       </div>
                     </div>
                     <div class="col">
