--- a/public/index.html
+++ b/public/index.html
@@ -889,7 +889,7 @@
             <div class="section-title text-center">
               <h2>Наши клиенты</h2>
             </div>
-            <div class="prm__pxs pxs">
+            <div class="prm__pxs pxs d-none d-sm-block">
               <div class="px px-4" id="px4"><img src="#" data-src="img/list-logo-1.png" alt="" data-depth="1"/></div>
               <div class="px px-5" id="px5"><img src="#" data-src="img/list-logo-2.png" alt="" data-depth="0.75"/></div>
               <div class="px px-6" id="px6"><img src="#" data-src="img/list-logo-3.png" alt="" data-depth="0.5"/></div>
