--- a/public/index.html
+++ b/public/index.html
@@ -667,7 +667,10 @@
                               <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Дмитрий Новиков
-                                  </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                                  </div>
+                                  <picture> 
+                                    <source class="lazy-sourse" srcset="#" data-srcset="img/team-1-lg.png" media="(min-width: 2000px)" type="image/png"/><img class="res-i" src="img/loadgif.gif" data-src="img/team-1.png" alt=""/>
+                                  </picture>
                                 </div>
                               </div>
                               <div class="col">
@@ -695,7 +698,10 @@
                               <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Денис Миловидов
-                                  </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                                  </div>
+                                  <picture> 
+                                    <source class="lazy-sourse" srcset="#" data-srcset="img/team-2-lg.png" media="(min-width: 2000px)" type="image/png"/><img class="res-i" src="img/loadgif.gif" data-src="img/team-2.png" alt=""/>
+                                  </picture>
                                 </div>
                               </div>
                               <div class="col">
@@ -723,7 +729,10 @@
                               <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Алиса Новикова
-                                  </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                                  </div>
+                                  <picture> 
+                                    <source class="lazy-sourse" srcset="#" data-srcset="img/team-3-lg.png" media="(min-width: 2000px)" type="image/png"/><img class="res-i" src="img/loadgif.gif" data-src="img/team-3.png" alt=""/>
+                                  </picture>
                                 </div>
                               </div>
                               <div class="col">
@@ -751,7 +760,10 @@
                               <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Дмитрий Пощикайло
-                                  </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                                  </div>
+                                  <picture> 
+                                    <source class="lazy-sourse" srcset="#" data-srcset="img/team-4-lg.png" media="(min-width: 2000px)" type="image/png"/><img class="res-i" src="img/loadgif.gif" data-src="img/team-4.png" alt=""/>
+                                  </picture>
                                 </div>
                               </div>
                               <div class="col">
@@ -779,7 +791,10 @@
                               <div class="col-xxl-5 col-md-4 align-self-end">
                                 <div class="s-team__img-wrap">
                                   <div class="s-team__title d-md-none text-center">Андрей Бударинцев
-                                  </div><img class="res-i" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                                  </div>
+                                  <picture> 
+                                    <source class="lazy-sourse" srcset="#" data-srcset="img/team-5-lg.png" media="(min-width: 2000px)" type="image/png"/><img class="res-i" src="img/loadgif.gif" data-src="img/team-5.png" alt=""/>
+                                  </picture>
                                 </div>
                               </div>
                               <div class="col">
